# BIMAP

./: .gitignore  LICENSE  MANUAL.md  TODO.md  bump_version.py  find_missing_translations.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXTENSIONS.md  INSTALL.md
installer/: bimap.spec  bimap_portable.spec  bimap_setup.iss  build_installer.ps1  create_icon.py  file_version_info.txt
src/bimap/: __init__.py  app.py  config.py  i18n.py  secrets.py
src/bimap/data/: __init__.py  api_source.py  base.py  csv_source.py  geojson_source.py  refresh.py  sql_source.py
src/bimap/engine/: __init__.py  _utils.py  commands.py  delimitation.py  geocoding.py  live_feed_fetcher.py  pdf_renderer.py  project_io.py  tile_math.py
src/bimap/models/: __init__.py  annotation.py  data_source.py  extension_template.py  form_design.py  keypoint.py  layer.py  live_layer.py  map_state.py  pdf_layout.py  project.py  style.py  zone.py
src/bimap/ui/: __init__.py  _utils.py  dark_theme.qss  main_window.py  toolbar.py  widgets.py
src/bimap/ui/dialogs/: __init__.py  data_source_dialog.py  debug_log_dialog.py  delimitation_dialog.py  element_edit_dialog.py  export_dialog.py  extension_editor_dialog.py  extension_manager_dialog.py  extension_viewer_dialog.py  form_designer_dialog.py  form_fill_dialog.py  geocode_dialog.py  goto_coords_dialog.py  live_layer_dialog.py  map_composer_dialog.py  (+3 more)
tests/: conftest.py  test_commands.py  test_project_io.py  test_tile_math.py  test_ui_widgets.py
(+12 files in other folders)
